Header Visibility based on View Settings

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -193,6 +193,18 @@
           }
         }
       }
+    },
+    "extends": {
+      "extensions": {
+        "sap.ui.controllerExtensions": {
+          "sap.fe.templates.ListReport.ListReportController": {
+            "controllerName": "zcebyclerk.ext.controller.ListReportExtension"
+          },
+          "sap.fe.templates.ObjectPage.ObjectPageController#zcebyclerk::HeaderObjectPage": {
+            "controllerName": "zcebyclerk.ext.controller.HeaderObjectPage"
+          }
+        }
+      }
     }
   },
   "sap.fiori": {
