Set Dynamic Column Labels - List Page

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -130,7 +130,7 @@
           "options": {
             "settings": {
               "contextPath": "/Header",
-              "variantManagement": "Page",
+              "variantManagement": "Control",
               "navigation": {
                 "Header": {
                   "detail": {
